--- a/PythonGraph.ipynb
+++ b/PythonGraph.ipynb
@@ -18,7 +18,7 @@
     "plt.plot(years, medianHousePrices, c=\"red\")\n",
     "plt.xlabel(\"Years\")\n",
     "plt.xticks(years, [f\"{y}\" for y in years])\n",
-    "plt.title(\"Median House Prices (1960 - 2020)\\nCountry Z\")\n",
+    "plt.title(\"Median House Prices (1960 - 2020) | Country Z\")\n",
     "plt.ylabel(\"Price (€)\")\n",
     "plt.yticks(price, [f\"{p}K\" for p in price])\n",
     "# Showing Graph\n",
